0.6.4 (not yet released, not finished features marked by ?)
	up to five savegames
	fixes in game script interpreter
	? Amiga OS4 port
	? change character in get/use
	do not talk to characters that have nothing to tell
	time compression
	in game help
	quest failed dialog implemented
	other minor GUI improvements
	data paths renamed to lotr

0.6.3
	coding style fixes
	command spot listings in wizard mode
	gui tweaks (large screens)
	fix goto command to different spot

0.6.2
	coding style fixes
	fixed python scripting

0.6.1
	improved python scripting
	TTT compiles again

0.6.0
	python scripting support started

0.5.11
	title changed to tile

0.5.10
	cd version support
	#include<SDL.h> added to lord.c (OS X compile fix)
	USE command renamed to ACTION command
	fixed default answer in npc interaction
	reads paragraphs from para.dat if available
	fixed questions containing \'
	
0.5.9
	Demo text fix

0.5.8
	FotR made again to compile
	spot.c: command 3a implemented

0.5.7
	map.c: (TTT) gamesaves work in buildings
	gui.c: (TTT) book background when changing party
	spot.c: (TTT) "You see items here you might use." message implemented
	combat.c: enemies can use bows
	game.c: recruited characters use their weapons by default
	gui.c: (TTT) new/old game dialog
	game.c character.c: old games convert
	map.c: right bound for building displays

0.5.6
	buildings implemented in TTT

0.5.5
	experimental support for The Two Towers
	cartoon.c: opening cartoon fix
	cartoon.c: Fatty Bolger cartoon fix via dirty hack

0.5.4
	Game save/load fix
	various small bugfixes
	firing with bow implemented
	demo fixes

0.5.3
	After-death dialog implemented
	Trade The Ring bug fixed
	do not switch cwd to $HOME/.lord/
	map.c: map_character_move: direction fix


0.5.2
	map.c: pits made impassable
	spot.c: use command length fixed
	gui.c: USE_QUESTION bug fixed (Rayf Brogan bug)
	spot.h, gui.c: SPOT_USE_BUY implemented (Bill Fernys pony)