@@ -1,9 +1,16 @@
 
 # Lord of the Ring game engine Makefile
 
-CC = gcc
+LOTR_MAKE_PROCESSED=1
 
+ifeq ($(LOTR_MAKE_CONFIGURED),)
+# Call platform specific configuration from here
+# include Makefile.os4
+endif
+
+ifeq ($(PREFIX),)
 PREFIX=/usr/local
+endif
 
 # set this to 1 if you want debug version (including cheats)
 DEBUG=0
@@ -12,21 +19,27 @@ DEBUG=0
 # currently only for testing (use together with debug)
 EXTENDED=0
 
-# set this to 1 if you want to compile as demo
-DEMO=0
 
-# use SDL mixeer?
+# do the configuration only if we have not been called from platform specific script
+ifeq ($(LOTR_MAKE_CONFIGURED),)
+
+# use SDL mixer?
+ifeq ($(USE_SDL_MIXER),)
 USE_SDL_MIXER=1
+endif
+
+CC = gcc
+LD = gcc
+LD_STATIC = gcc --static
 
 INCLUDES = `sdl-config --cflags` `xml2-config --cflags`
 LIBRARIES = `sdl-config --libs` `xml2-config --libs`
-CFLAGS = -ggdb -Wall
-#CFLAGS = -ggdb -O3 -march=athlon-tbird -Wall -funroll-loops -fomit-frame-pointer 
-#CFLAGS = -g0 -O3 -Wall -funroll-loops -fomit-frame-pointer 
+STATIC_LIBRARIES = `sdl-config --static-libs` `xml2-config --libs --static`
+CFLAGS = -Wall
 CCPARAMS = $(CFLAGS) $(INCLUDES) $(DEFINITIONS)
+endif
 
-DEFINITIONS = -DDEMO=$(DEMO) -DPREFIX=\"$(PREFIX)\"
-
+DEFINITIONS = -DPREFIX=\"$(PREFIX)\"
 
 HEADERFILES = archive.h av.h cartoon.h character.h combat.h credit.h lord.h lord_sdl.h map.h midi.h game.h graphics.h gui.h init.h object.h shape.h sound.h spot.h timing.h utils.h
 PLAYCARTOONOBJ = archive.o cartoon.o lord_sdl.o midi.o graphics.o sound.o timing.o utils.o
@@ -35,6 +48,7 @@ OBJFILES = archive.o av.o cartoon.o character.o combat.o lord_sdl.o map.o midi.o
 
 ifeq ($(USE_SDL_MIXER),1)
 LIBRARIES += -lSDL_mixer
+STATIC_LIBRARIES += -lSDL_mixer
 DEFINITIONS += -DHAVE_SDL_MIXER
 endif
 
@@ -50,6 +64,9 @@ endif
 
 ifeq ($(DEBUG),1)
 DEFINITIONS += -DDEBUG
+CFLAGS += -ggdb -O0
+else
+CFLAGS += -g0 -O2 -funroll-loops
 endif
 
 all: lord
@@ -60,18 +77,18 @@ clean:
 
 
 lord: $(OBJFILES) lord.o
-	$(CC) -Wall $(LIBRARIES) $(OBJFILES) lord.o -o lord
+	$(LD) $(OBJFILES) $(LIBRARIES) lord.o -o lord
 
 lord.static: $(OBJFILES) lord.o
-	$(CC) -Wall --static $(OBJFILES) `sdl-config --static-libs` -lSDL_mixer `xml2-config --libs --static` lord.o -o lord.static
+	$(LD_STATIC) $(OBJFILES) $(STATIC_LIBRARIES) lord.o -o lord.static
 
 
 playcartoon: $(PLAYCARTOONOBJ) playcartoon.o
-	$(CC) -Wall $(LIBRARIES) $(PLAYCARTOONOBJ) playcartoon.o -o playcartoon
+	$(LD) $(PLAYCARTOONOBJ) $(LIBRARIES) playcartoon.o -o playcartoon
 
 
 playav: $(PLAYAVOBJ) playav.o
-	$(CC) -Wall $(LIBRARIES) $(PLAYAVOBJ) playav.o -o playav
+	$(LD) $(PLAYAVOBJ) $(LIBRARIES) playav.o -o playav
 
 
 
@@ -85,7 +102,7 @@ sound.o: sound.c sounds_cd.h $(HEADERFILES)
 	$(CC) $(CCPARAMS) -c sound.c
 
 
-%.o: %.c $(HEADERFILES)
+%.o: %.c $(HEADERFILES) Makefile
 	$(CC) $(CCPARAMS) -c $< -o $@
 
 pythonspot.c: pythonspot.pyx
