@@ -1,0 +1,28 @@
+# Lord of the Ring game engine Makefile for Amiga OS4
+
+CC = gcc
+LD = gcc
+LD_STATIC = gcc --static
+
+# game data path prefix
+PREFIX=/PROGDIR
+
+# use SDL mixer?
+USE_SDL_MIXER=1
+
+SDK_DIR = /sdk/local/newlib
+SDK_DIR_COMMON = /sdk/local/common
+INCLUDES = -I$(SDK_DIR)/include/SDL -I$(SDK_DIR)/include/ -I$(SDK_DIR_COMMON)/include/ -I$(SDK_DIR_COMMON)/include/SDL -I$(SDK_DIR)/include/libxml2
+LIBRARIES = -lxml2 -lSDL_image -ltiff -lpng -ljpeg -lz -lSDL_mixer -lsmpeg -lstdc++ -lSDL_ttf -lfreetype -lsdlmain -lsdl -lauto -lpthread -lunix 
+CFLAGS = -Wall
+CCPARAMS = $(CFLAGS) $(INCLUDES) $(DEFINITIONS)
+
+ifeq ($(USE_SDL_MIXER),1)
+LIBRARIES += -lSDL_mixer -lvorbisfile -lvorbis -logg
+endif
+
+LOTR_MAKE_CONFIGURED = yes
+
+ifeq ($(LOTR_MAKE_PROCESSED),)
+include Makefile
+endif
